# get_fucked_discord

./: .eslintrc.cjs  .gitignore  Makefile  README.md  TOKEN.pem  index.html  package.json  tailwind.config.js  todo.txt  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/src/: files.rs  main.rs  window.rs
src-tauri/src/dc_bot/: mod.rs  structs.rs
src/components/: BlankSpaceEvent.tsx  DragAndDropInfo.tsx  ItemList.tsx  List.tsx  ListItem.tsx  Lockdown.tsx  ProcessBarItem.tsx  TrashBin.tsx
src/helpers/: InitBot.tsx  Scrollbar.tsx  SplashScreen.tsx
src/hooks/: useScrollbarPos.ts
src/styles/: .css  scrollbar.css
