[package]
name = "get-fucked-discord"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1.36", features  = ["macros"] }
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
lazy_static = "1.4"
futures = "0.3.30"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
